cloudformation/opsschool_cloudformation_cassandra1.yaml
---
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t1.micro, t2.nano, t2.micro, t2.small, t2.medium, t2.large, m1.small,
      m1.medium, m1.large, m1.xlarge, m2.xlarge, m2.2xlarge, m2.4xlarge, m3.medium,
      m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge,
      m4.10xlarge, c1.medium, c1.xlarge, c3.large, c3.xlarge, c3.2xlarge, c3.4xlarge,
      c3.8xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge, g2.2xlarge,
      g2.8xlarge, r3.large, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, i2.xlarge,
      i2.2xlarge, i2.4xlarge, i2.8xlarge, d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge,
      hi1.4xlarge, hs1.8xlarge, cr1.8xlarge, cc2.8xlarge, cg1.4xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
Mappings:
  AWSRegionToAMI:
      us-east-1:
          AMI: ami-66506c1c
      us-east-2:
          AMI: ami-965e6bf3
      us-west-1:
          AMI: ami-07585467
      us-west-2:
          AMI: ami-79873901
      ca-central-1:
          AMI: ami-32bb0556   
      eu-central-1:
          AMI: ami-714f2b1e
Resources:
  Cassandra1:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref 'KeyName'
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref CassandraSecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          echo "US/Pacific" > /etc/timezone
          add-apt-repository ppa:openjdk-r/ppa
          apt-get update
          apt-get install vim curl zip unzip git python-pip -y -q

          # Java install - adjust if needed
          apt-get install openjdk-8-jdk -y -q

          #install cassandra
          echo "deb http://www.apache.org/dist/cassandra/debian 311x main" | sudo tee -a /etc/apt/sources.list.d/cassandra.sources.list
          curl https://www.apache.org/dist/cassandra/KEYS | sudo apt-key add -
          apt-get update
          apt-get install cassandra -y



  Cassandra2:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref 'KeyName'
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref CassandraSecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          echo "US/Pacific" > /etc/timezone
          add-apt-repository ppa:openjdk-r/ppa
          apt-get update
          apt-get install vim curl zip unzip git python-pip -y -q

          # Java install - adjust if needed
          apt-get install openjdk-8-jdk -y -q

          #install cassandra
          echo "deb http://www.apache.org/dist/cassandra/debian 311x main" | sudo tee -a /etc/apt/sources.list.d/cassandra.sources.list
          curl https://www.apache.org/dist/cassandra/KEYS | sudo apt-key add -
          apt-get update
          apt-get install cassandra -y


  Cassandra3:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-instance.html
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
      InstanceType: !Ref 'InstanceType'
      KeyName: !Ref 'KeyName'
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref CassandraSecurityGroup
      UserData:
        Fn::Base64: |
          #!/bin/bash
          echo "US/Pacific" > /etc/timezone
          add-apt-repository ppa:openjdk-r/ppa
          apt-get update
          apt-get install vim curl zip unzip git python-pip -y -q

          # Java install - adjust if needed
          apt-get install openjdk-8-jdk -y -q

          #install cassandra
          echo "deb http://www.apache.org/dist/cassandra/debian 311x main" | sudo tee -a /etc/apt/sources.list.d/cassandra.sources.list
          curl https://www.apache.org/dist/cassandra/KEYS | sudo apt-key add -
          apt-get update
          apt-get install cassandra -y



  CassandraIP1:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Cassandra1
  CassandraIP2:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Cassandra2
  CassandraIP3:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-eip.html
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Cassandra3

  SSHSecurityGroup:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

  CassandraSecurityGroup:
    # http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '7000'
        ToPort: '7001'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9042'
        ToPort: '9042'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '7199'
        ToPort: '7199'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9160'
        ToPort: '9160'
        CidrIp: 0.0.0.0/0
